[package]
name = "waterfurnace_symphony"
version = "0.1.0"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
http = "0.2"
regex = "1"
reqwest = { version = "0.10", features = ["rustls-tls", "cookies", "gzip", "json"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["time", "macros", "sync"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tokio-tungstenite = { version = "0.11", features = ["tls"] }
url = "2.1"
