[package]
name = "waterfurnace_symphony"
version = "0.1.3"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
eyre = "0.6"
futures = "0.3"
http = "0.2"
ready_waiter = { path = "ready_waiter" }
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "cookies", "gzip", "json"] }
serde = "1"
serde_json = "1"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.28", features = ["time", "macros", "sync"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
url = "2.1"

[dev-dependencies]
lazy_static = "1.4"
mock_symphony = { path = "mock_symphony" }
rand = "0.8"
rand_distr = "0.4"
warp = "0.3"
