[package]
name = "mock_symphony"
version = "0.1.0"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.7"
rand_distr = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["time", "macros", "sync"] }
tracing = "0.1"
warp = "0.2"
