[package]
name = "ready_waiter"
version = "0.1.1"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
