[package]
name = "waterfurnace_http_gateway"
version = "0.1.0"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
serde_json = "1.0.58"
structopt = "0.3.19"
tokio = "0.2.22"
tracing-subscriber = "0.2.13"
warp = "0.2"
waterfurnace_symphony = { path = "../", version = "0.1" }
